unpackaged/main/default/objects/cmbls__Expense__c/cmbls__Expense__c.object-meta.xml
<CustomObject>
    <label>Expense</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>