unpackaged/main/default/objects/cmbls__Expense__c/fields/Capitalized_Broker_GL__c.field-meta.xml
<CustomField>
    <fullName>Capitalized_Broker_GL__c</fullName>
    <label>Capitalized - Broker GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>