unpackaged/main/default/objects/cmbls__Expense__c/fields/Capitalized_Fundera_GL__c.field-meta.xml
<CustomField>
    <fullName>Capitalized_Fundera_GL__c</fullName>
    <label>Capitalized Fundera GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>