unpackaged/main/default/objects/cmbls__Expense__c/fields/cmbls__Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Fee_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Origination Fee</fullName>
            </value>
            <value>
                <fullName>Broker Fee</fullName>
            </value>
            <value>
                <fullName>RevShare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>