unpackaged/main/default/objects/cmbls__Expense__c/fields/cmbls__Repayment__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Repayment__c</fullName>
    <label>Repayment</label>
    <referenceTo>cmbls__Repayment__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>