unpackaged/main/default/objects/cmbls__Expense__c/fields/Lead_Aggregators_Other_GL__c.field-meta.xml
<CustomField>
    <fullName>Lead_Aggregators_Other_GL__c</fullName>
    <label>Lead Aggregators - Other GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>