unpackaged/main/default/objects/cmbls__Expense__c/fields/Lead_Provider__c.field-meta.xml
<CustomField>
    <fullName>Lead_Provider__c</fullName>
    <label>Lead Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LendingTree</fullName>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
            <value>
                <fullName>Fundera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>