unpackaged/main/default/objects/cmbls__Expense__c/recordTypes/cmbls__Expense.recordType-meta.xml
<RecordType>
    <fullName>cmbls__Expense</fullName>
    <active>true</active>
    <label>Expense</label>
</RecordType>