unpackaged/main/default/objects/cmbls__Expense__c/validationRules/Required_Lead_Provider_for_RevShare.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Lead_Provider_for_RevShare</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
            ISPICKVAL(Lead_Provider__c, ''),
            ISPICKVAL(cmbls__Fee_Type__c, 'RevShare')
        )</errorConditionFormula>
    <errorDisplayField>Lead_Provider__c</errorDisplayField>
    <errorMessage>Lead Provider must be selected for RevShare Expense Type</errorMessage>
</ValidationRule>